third_party/rust/cxx/v1/crate/tests/ui/rust_pinned.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/rust_pinned.rs:6:14
   |
6  |         type Pinned;
   |              ^^^^^^ within `Pinned`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using `Box::pin`
note: required because it appears within the type `Pinned`
  --> tests/ui/rust_pinned.rs:10:12
   |
10 | pub struct Pinned {
   |            ^^^^^^
note: required by a bound in `__AssertUnpin`
  --> tests/ui/rust_pinned.rs:6:9
   |
6  |         type Pinned;
   |         ^^^^^^^^^^^^ required by this bound in `__AssertUnpin`
